Update AddNode with resources and flavor overrides